syntax = "proto3";

option go_package = "genproto/user";

package protos;

service UserManagement {
    rpc Get (ID) returns (User);
    rpc Put (User) returns (Void);
    rpc Delete (ID) returns (Void);
    rpc GetProfile (ID) returns (Profile);
    rpc PutProfile (Profile) returns (Void);
}

message ID {
    string id = 1;
}

message Void {}

message User {
    string id = 1;
    string username = 2;
    string email = 3;
    string password = 4;
    string created_at = 5;
    string updated_at = 6;
}

message Profile {
    string user_id = 1;
    string full_name = 2;
    string bio = 3;
    string role = 4;
    string location = 5;
    bytes avatar_image = 6;
    string website = 7;
}